<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="sections">
        <item>@string/section_recommend</item>
        <item>@string/section_bangumi</item>
        <item>@string/section_live</item>
        <item>@string/section_focus</item>
        <item>@string/section_more</item>
        <item>@string/section_discover</item>
    </string-array>

    <string name="app_name">哔哩哔哩</string>
    <string name="info_play_times_format">%d</string>
    <string name="info_reviews_format">%d</string>
    <string name="info_following_format">关注 %d</string>
    <string name="info_fans_format">粉丝 %d</string>
    <string name="hotbitmapgg">HotBitmapGG</string>
    <string name="github">GitHub: </string>
    <string name="github_link">https://github.com/HotBitmapGG</string>
    <string name="sina_weibo_link">新浪微博:http://m.weibo.cn/users/3223089177/qq</string>
    <string name="jianshu_link">简书:http://www.jianshu.com/notebooks/5181955/latest</string>
    <string name="add_follow">+关注</string>
    <string name="login_hint_account">请输入您的哔哩哔哩账号</string>
    <string name="login_hint_password">请输入您的密码</string>
    <string name="login">登录</string>
    <string name="all_start">全部开始</string>
    <string name="edit">编辑</string>
    <string name="sp_play">播放:</string>
    <string name="sp_total_of">共:</string>
    <string name="sp_follow">关注:</string>
    <string name="sp_collection">收藏:</string>
    <string name="sp_introduction">专题简介:</string>
    <string name="sp_videos">专题剧集</string>
    <string name="splash_title">copyright © 2015–2016 HotBitmapGG</string>
    <string name="goto_look">进去看看</string>
    <string name="discover_search_hint">搜索视频 番剧 up主或av号</string>
    <string name="everyone_in_the_search">大家都在搜</string>
    <string name="look_more">查看更多</string>
    <string name="interest_in_circle">兴趣圈</string>
    <string name="original_rank">原创排行榜</string>
    <string name="all_rank">全区排行榜</string>
    <string name="game_center">游戏中心</string>
    <string name="overseas_travel">海外游</string>
    <string name="discover_msg_1">萌系少女战舰养成!</string>
    <string name="discover_msg_2">和漫游娘一起游遍日本!</string>
    <string name="check_update">检查更新</string>
    <string name="logout">退出登录</string>
    <string name="introduction">简介</string>
    <string name="coin">投硬币</string>
    <string name="collection">收藏</string>
    <string name="cache">缓存</string>
    <string name="charging">请赐予我电量吧 !</string>
    <string name="charg">充电</string>
    <string name="more_charging">更多电量,更多灵感哟  o(*≧▽≦)ツ</string>
    <string name="video_about">视频相关</string>
    <string name="more">更多</string>
    <string name="download">下载</string>
    <string name="reload">重新加载</string>
    <string name="to_them">追番</string>
    <string name="time_line">放送表</string>
    <string name="index">索引</string>
    <string name="bangumi_recommend">番剧推荐</string>
    <string name="two_bangumi">二次元新番</string>
    <string name="change_recommend">换一波推荐</string>
    <string name="rank">排行榜</string>
    <string name="topic">话题</string>
    <string name="load_more">正在加载…</string>
    <string name="search_hint">搜索视频,番剧,up主或av号</string>


    <!--Vitamio Strings-->
    <string name="video_init">初始化播放器…</string>
    <string name="video_layout_loading">正在缓冲…</string>
    <string name="VideoView_error_title">Cannot play video</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Sorry,
        this video is not valid for streaming to this device.</string>
    <string name="VideoView_error_text_unknown">对不起,这个视频不能播放。</string>
    <string name="VideoView_error_button">OK</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>
    <string name="video_original">100%</string>
    <string name="video_fit_screen">全屏</string>
    <string name="video_stretch">拉伸</string>
    <string name="video_crop">裁剪</string>
    <string name="video_screen_locked">屏幕已锁定</string>
    <string name="video_screen_unlocked">屏幕锁定已解除</string>
    <string name="video_layout_buffering_progress">缓冲: %.2f%%</string>
    <string name="video_cannot_play">对不起,这个视频不能播放。</string>
    <string name="file_explorer_sdcard_not_available">SD卡无法读取</string>
    <string name="video_screenshot_save_in">截图存放在 %s.</string>
    <string name="video_screenshot_failed">截图失败</string>
    <string name="closing_file">正在退出…</string>
    <string name="video_loading">加载中…</string>
    <string name="buffering">buffering</string>
    <string name="vitamio_name">Vitamio</string>
    <string name="vitamio_init_decoders">Initializing decoders…</string>
    <string name="vitamio_videoview_error_title">Cannot play video</string>
    <string name="vitamio_videoview_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to
		this device.</string>
    <string name="vitamio_videoview_error_text_unknown">Sorry, this video cannot be played.</string>
    <string name="vitamio_videoview_error_button">OK</string>


    <!-- Navigation Items -->
    <string name="item_home">主页</string>
    <string name="item_group">关注的人</string>
    <string name="item_tracker">消费记录</string>
    <string name="item_downloaded">离线缓存</string>
    <string name="item_favourite">我的收藏</string>
    <string name="item_history">历史记录</string>
    <string name="item_settings">设置与帮助</string>
    <string name="item_theme">主题选择</string>
    <string name="item_app">应用推荐</string>


    <!--App 介绍-->
    <string name="about_introduce">「哔哩哔哩」- bilibili ( ゜- ゜)つロ 干杯。</string>
    <string name="about_menu_action_share">分享</string>
    <string name="about_app_name_with_introduce">哔哩哔哩 - bilibili ( ゜- ゜)つロ 干杯。</string>
    <string name="about_developers">关于我</string>
    <string name="about_open_source_lis">感谢开源贡献</string>
    <string name="about_introduce_and_help">介绍与帮助</string>
    <string name="about_open_source_libraries_list">
        com.github.ozodrukh:CircularReveal:1.1.0@aar
        \ncom.squareup.picasso:picasso:2.5.2
        \ncn.bmob.android:bmob-sdk:3.4.6
        \ncom.flyco.tablayout:FlycoTabLayout_Lib:2.0.0@aar
        ncom.zhy:flowlayout-lib:1.0.1
        \ncom.jakewharton:butterknife:7.0.1
        \ncom.squareup.okhttp3:okhttp:3.2.0
        \nio.reactivex:rxandroid:1.1.0
        \nio.reactivex:rxjava:1.1.0
        \ncom.squareup.retrofit:retrofit:2.0.0-beta1
        \ntv.danmaku.ijk.media:ijkplayer-java:0.4.5.1</string>
    <string name="about_function">实现功能</string>
    <string name="about_function_list">
        * 首页推荐\n* 首页番剧\n* 首页直播
        \n* 首页分区\n* 首页发现\n* 番剧详情
        \n* 视频详情\n* 直播详情\n* 专题详情
        \n* 全区排行榜\n* 热门排行榜\n* 个人中心
        \n* 视频播放\n* 烈焰弹幕库\n* Material Design</string>
    <string name="about">关于哔哩哔哩</string>
    <string name="about_version">V1.0</string>


    <!--哔哩哔哩-->
    <string name="home_tab_more">更多</string>
    <string name="section_recommend">推荐</string>
    <string name="section_live">直播</string>
    <string name="section_focus">关注</string>
    <string name="section_cartoon">动画</string>
    <string name="section_music">音乐</string>
    <string name="section_dance">舞蹈</string>
    <string name="section_game">游戏</string>
    <string name="section_technology">科技</string>
    <string name="section_entertainment">娱乐</string>
    <string name="section_funny">鬼畜</string>
    <string name="section_movie">电影</string>
    <string name="section_tv_series">电视剧</string>
    <string name="section_more">分区</string>
    <string name="section_bangumi">番剧</string>
    <string name="section_discover">发现</string>

    <string name="weekday_sun">周日</string>
    <string name="weekday_mon">周一</string>
    <string name="weekday_tue">周二</string>
    <string name="weekday_wed">周三</string>
    <string name="weekday_thu">周四</string>
    <string name="weekday_fri">周五</string>
    <string name="weekday_sat">周六</string>

    <string name="weekday_update">每%s更新</string>

    <string-array name="weekdays">
        <item>@string/weekday_sun</item>
        <item>@string/weekday_mon</item>
        <item>@string/weekday_tue</item>
        <item>@string/weekday_wed</item>
        <item>@string/weekday_thu</item>
        <item>@string/weekday_fri</item>
        <item>@string/weekday_sat</item>
    </string-array>

</resources>