<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <com.hotbitmapgg.ohmybilibili.widget.SpringScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:orientation="vertical">


            <com.hotbitmapgg.ohmybilibili.widget.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_bg"
                app:border_color="@color/gray"
                app:border_width="1dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/hotbitmapgg"
                android:textColor="@color/font_normal"
                android:textSize="18sp" />

            <View
                android:layout_width="120dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:autoLink="web"
                android:text="@string/github_link"
                android:textSize="14sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:autoLink="web"
                android:text="@string/sina_weibo_link"
                android:textSize="14sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:autoLink="web"
                android:text="@string/jianshu_link"
                android:textSize="14sp" />


        </LinearLayout>

    </com.hotbitmapgg.ohmybilibili.widget.SpringScrollView>

</LinearLayout>






