<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/default_general_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_general_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/layout_bangumi_new"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/bangumi_recommend_title_height"
            android:layout_margin="@dimen/bangumi_recommend_title_margin"
            android:layout_weight="1"
            android:background="@drawable/yellow_item_bg"
            android:drawablePadding="@dimen/bangumi_recommend_title_margin"
            android:drawableStart="@drawable/ic_following_bangumi"
            android:gravity="center"
            android:padding="@dimen/default_general_margin"
            android:text="@string/to_them"
            android:textColor="@color/white"
            android:textSize="@dimen/default_medium_text_size"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/layout_bangumi_week"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/bangumi_recommend_title_height"
            android:layout_margin="@dimen/bangumi_recommend_title_margin"
            android:layout_weight="1"
            android:background="@drawable/pink_item_bg"
            android:drawablePadding="@dimen/bangumi_recommend_title_margin"
            android:drawableStart="@drawable/ic_bangumi_calendar_7"
            android:gravity="center"
            android:padding="@dimen/default_general_margin"
            android:text="@string/time_line"
            android:textColor="@color/white"
            android:textSize="@dimen/default_medium_text_size"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/layout_bangumi_index"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/bangumi_recommend_title_height"
            android:layout_margin="@dimen/bangumi_recommend_title_margin"
            android:layout_weight="1"
            android:background="@drawable/blue_item_bg"
            android:drawablePadding="@dimen/bangumi_recommend_title_margin"
            android:drawableStart="@drawable/ic_bangumi_category"
            android:gravity="center"
            android:padding="@dimen/default_general_margin"
            android:text="@string/index"
            android:textColor="@color/white"
            android:textSize="@dimen/default_medium_text_size"
            android:textStyle="bold" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:drawablePadding="@dimen/default_general_margin"
            android:drawableStart="@drawable/ic_tuijian"
            android:padding="@dimen/default_general_margin"
            android:text="@string/bangumi_recommend"
            android:textColor="@color/font_normal"
            android:textSize="@dimen/default_small_text_size" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:drawableEnd="@drawable/register_bottom_arrow"
            android:drawablePadding="@dimen/default_tiny_margin"
            android:padding="@dimen/default_general_margin"
            android:text="@string/more"
            android:textColor="@color/black_alpha_30"
            android:textSize="@dimen/default_small_text_size" />


    </RelativeLayout>


</LinearLayout>